Proyecto2/Kubernetes/kafka-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: kafka-consumer
        image: 34.172.134.232.nip.io/tweets-clima/kafka-consumer
      imagePullSecrets:
      - name: harbor-secret
