Proyecto2/Kubernetes/rabbitmq-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-consumer
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-consumer
  template:
    metadata:
      labels:
        app: rabbitmq-consumer
    spec:
      containers:
      - name: rabbitmq-consumer
        image: 34.172.134.232.nip.io/tweets-clima/rabbitmq-consumer
      imagePullSecrets:
      - name: harbor-secret
