Proyecto2/Kubernetes/rust-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: tweets-clima
  labels:
    app: rust-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 34.172.134.232.nip.io/tweets-clima/rust-api:latest
        ports:
        - containerPort: 8080
