Proyecto2/Kubernetes/go-grpc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: 34.172.134.232.nip.io/tweets-clima/grpc-client
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: "50m"
          limits:
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: tweets-clima
spec:
  selector:
    app: grpc-client
  ports:
  - port: 50051
    targetPort: 50051
