Proyecto2/Kubernetes/go-grpc-server-rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-rabbit
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server-rabbit
  template:
    metadata:
      labels:
        app: grpc-server-rabbit
    spec:
      containers:
      - name: grpc-server-rabbit
        image: 34.172.134.232.nip.io/tweets-clima/grpc-server-rabbit
        resources:
          requests:
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-rabbit-service
  namespace: tweets-clima
spec:
  selector:
    app: grpc-server-rabbit
  ports:
  - port: 50052
    targetPort: 50052
