Proyecto2/Kubernetes/go-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest
  namespace: tweets-clima
spec:
  selector:
    app: go-rest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
