Proyecto2/Kubernetes/grafana-deployment.yaml




apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: tweets-clima
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          name: http
        resources:
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: tweets-clima
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
    name: http
  type: ClusterIP
