Proyecto2/Kubernetes/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: tweets-clima
spec:
  selector:
    app: grpc-client
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
