Proyecto2/Kubernetes/rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: tweets-clima
spec:
  selector:
    app: rust-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
