Proyecto2/Kubernetes/valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  namespace: tweets-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: bitnami/valkey:latest
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "50m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        volumeMounts:
        - name: valkey-data
          mountPath: /data
      volumes:
      - name: valkey-data
        persistentVolumeClaim:
          claimName: valkey-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: tweets-clima
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: valkey
  clusterIP: None
