Proyecto2/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweets-ingress
  namespace: tweets-clima
spec:
  ingressClassName: nginx
  rules:
  - host: 34.67.99.104.nip.io
    http:
      paths:
      - path: /input
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 80
